2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* index.tpl:  Fix link to the map not being displayed at a hotspot, even when you are logged in.  There needs to be much better logick before we export such things to smarty templates.

2006-05-20 François Proulx <francois.proulx@gmail.com>
	* Added /wifidog/contrib and /wifidog/contrib/xslt directories
	* Posted Île Sans Fil XSLT example stylesheet for converting the hotspot_status page
		* Browser view
		* PDA view (by Jean-Pierre Lessard <jplprog@videotron.ca>)
		* Simply use in this manner :
		http://wifidog-server.org/hotspot_status.php?format=XML&xslt=http://wifidog-server.org/contrib/xslt/hotspot_status_browser.xsl

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* page.php:  Fix bugs in various files preventing the system from working from the command line.

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* More install script fixes:  Phlickr wouldn't install, and the permissions of wifidog/tmp/smarty/cache weren't checked.

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* More stylesheet and HTML work

2006-05-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix loging form incorrectly attempting to validate the password, preventing many existing
	accounts from logging-in.
	* Interim commit, begin simplifying the html ans stylesheets, and re-doing the general look.
	This is incomplete, this commit was done to fix the problem above.
	* install.php:  Fix path problems, make shel command errors visible.  Update magpie and smarty url to latest versions (note that this won't
	automatically update an existing install).  Didn't touch phlickr as I didn't know the implications
	* Add interactive scripts in sql/ to easily backup and restore a wifidog auth server database.

2006-05-10 François Proulx <francois.proulx@gmail.com>
	* Fixed Google Maps script path to images.

2006-05-10 François Proulx <francois.proulx@gmail.com>